improved the app

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
 <form action = "http://localhost:5000/results" method = "POST">
     
     <div class="container">
-        <p style="font-size: 26px" class="mbr-fonts-style">Choose an abstract to get started: </p>
+        <p style="font-size: 26px" class="mbr-fonts-style">Choose one abstract to get started: </p>
         <div class="media-container-row">
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
