--- a/templates/results.html
+++ b/templates/results.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section article content3 cid-rKnP1i7OnI" id="content3-r">
+<section class="engine"></section><section class="mbr-section article content3 cid-rKnP1i7OnI" id="content3-r">
 
     <div class="container">
         <div class="media-container-row">
@@ -86,6 +86,9 @@
 <table style="width:100%"><tr>
 <td style="width:40%; background: #f1f1f1f1">
     info about topics here
+    <form action = "http://localhost:5000/cluster" method = "POST">
+        <input type = "submit" name="button" value ="{{cluster}}" class="btn btn-primary display-4">
+    </form>
 </td>
 
 <td>
